# experimental-media-player

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  package.json  pnpm-lock.yaml
audio_test/: Cargo.toml
audio_test/src/: lib.rs  main.rs
qml/: app-window.qml  dataflow.qml  main-list.qml  media-controllers.qml  mobile-queue.qml  palette.qml  queue.qml  side-bar.qml
qml/components/: currently-playing.qml  display-box.qml  volume-slider.qml
qml/custom-elements/: playlists.qml
qml/screens/: settings.qml
requests/: Cargo.toml
requests/src/: apis.json  main.rs  requests.json
requests/src/stream/: stream.rs
src/: App.vue  cxxqt_object.rs  logic.rs  main.rs  settings.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/logic/: audio.rs  database.rs  mod.rs  queue.rs  slint.rs  source.rs  ui_events.rs
src/logic/audio/: media_player.rs  mod.rs  sink.rs  test.rs
src/logic/data_types/: mod.rs  playlist.rs  queue_item.rs  source.rs  track.rs
src/logic/database_types/: mod.rs  playlist.rs  queue_item.rs  source.rs  track.rs
src/player/: Cargo.toml  player.rs  wrapper.rs
src/player-examples/: Cargo.toml
src/player-examples/src/: example-1.rs
src/player/src/: main.rs  player.rs
ui/: app-window.slint  data-flow.slint  main-list.slint  media-controllers.slint  media-element.slint  mobile-queue.slint  queue.slint  side-bar.slint  style.slint
ui/components/: currently-playing.slint  display-box.slint  volume-slider.slint  wrapper.slint
ui/custom-elements/: custom-button.slint
ui/screens/: authentications.slint  settings.slint
