[package]
name = "emp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.15"
cxx-qt = "0.7.3"
dasp_sample = "0.11.0"
lofty = "0.22.4"
native-dialog = "0.9.0"
rand = "0.9.2"
rodio = "0.21.1"
rusqlite = "0.37.0"
serde = "1.0.228"
serde_json = "1.0.145"
slint = "1.12.1"
thiserror = "2.0.16"

[build-dependencies]
slint-build = "1.12.1"
