[package]
name = "emp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"./",
	"./requests/"
]

[dependencies]
anyhow = "1.0.100"
audio = "0.2.1"
crossbeam-channel = "0.5.15"
dasp_sample = "0.11.0"
derive_more = "2.0.1"
glib = "0.21.4"
lofty = "0.22.4"
native-dialog = "0.9.0"
rand = "0.9.2"
rusqlite = "0.37.0"
serde = "1.0.228"
serde_json = "1.0.145"
slint = "1.12.1"
thiserror = "2.0.16"

[build-dependencies]
slint-build = "1.12.1"
