[package]
name = "requests"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.3.1"
http-body-util = "0.1.3"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
