[package]
name = "requests"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
cpal = "0.17.3"
dotenv = "0.15.0"
futures = "0.3.32"
# ez-ffmpeg = "0.10.0"
# ffmpeg-sys-next = { version = "8.1.0", features = ["build"] }
http = "1.3.1"
http-body-util = "0.1.3"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
symphonia = "0.6.0"
symphonia-core = "0.6.0"
tokio = { version = "1.48.0", features = ["full"] }
