[package]
name = "gstreamer-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
gstreamer = "0.23.1"
gstreamer-video = "0.23.5"

[[bin]]
name = "example-1"
path = "./src/example-1.rs"

# [build-dependencies]
# system-deps = "7"

# [package.metadata.system-deps]
# "gstreamer-1.0" = "1.14"